Fix issue of other URL params gets cleared when close quick view & Removed opinionated styles from quick view button & added default theme styles & added with & align settings.

--- a/packages/blocks-next/src/blocks/product-quick-view-button/style.scss
+++ b/packages/blocks-next/src/blocks/product-quick-view-button/style.scss
@@ -1,31 +1,14 @@
 .wp-block-surecart-product-quick-view-button {
-    transition: all 0.3s ease-in-out;
-    transform: scale(1);
-    box-shadow: 0 0 0 transparent;
-    margin: 0;
-    opacity: 0.5;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
+    &.wp-block-button__link {
+        display: flex;
+        align-items: center;
+    }
     gap: 0.5em;
 	text-decoration: none;
     background-color: var(--sc-color-gray-300);
     color: var(--sc-color-gray-800);
     cursor: pointer;
-    svg {
-        transition: transform 0.3s ease;
-    }
     &.loading {
         pointer-events: none;
-        opacity: 0.2;
-    }
-    &:hover, &:focus {
-        transform: scale(1.05);
-        box-shadow: 0 0 0 2px var(--surecart-color-primary);
-        opacity: 1;
-        svg {
-            transform: scale(1.1);
-        }
     }
 }
